--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1297,7 +1297,7 @@ section.lazy-placeholder:after {
 }
 .cid-rV0nneyhZg {
   padding-top: 0px;
-  padding-bottom: 45px;
+  padding-bottom: 30px;
   background: #ffffff;
 }
 .cid-rV0nneyhZg .images-container.container-fluid {
@@ -1346,8 +1346,8 @@ section.lazy-placeholder:after {
   }
 }
 .cid-rX4I3HzI5Y {
-  padding-top: 0px;
-  padding-bottom: 0px;
+  padding-top: 15px;
+  padding-bottom: 15px;
   background-color: #ffffff;
 }
 .cid-rX4I3HzI5Y .mbr-text,
@@ -1360,24 +1360,24 @@ section.lazy-placeholder:after {
 .cid-rX4I3HzI5Y .mbr-text {
   color: #232323;
 }
-.cid-rUOTmhz5qV {
-  padding-top: 30px;
-  padding-bottom: 15px;
+.cid-rX5tLOlS3L {
+  padding-top: 15px;
+  padding-bottom: 0px;
   background-color: #ebe9ff;
 }
-.cid-rUOTmhz5qV h4 {
+.cid-rX5tLOlS3L h4 {
   font-weight: 500;
   margin-bottom: 0;
   text-align: left;
 }
-.cid-rUOTmhz5qV p {
+.cid-rX5tLOlS3L p {
   color: #767676;
   text-align: left;
 }
-.cid-rUOTmhz5qV .card-box {
+.cid-rX5tLOlS3L .card-box {
   padding-top: 2rem;
 }
-.cid-rUOTmhz5qV .card-wrapper {
+.cid-rX5tLOlS3L .card-wrapper {
   height: 100%;
 }
 .cid-rX4VGsF0Iv {
@@ -1654,7 +1654,7 @@ section.lazy-placeholder:after {
 .cid-rUTxgdy2l2 {
   background: #ffffff;
   padding-top: 0px;
-  padding-bottom: 0px;
+  padding-bottom: 45px;
   background: linear-gradient(0deg, #ffffff, #ffffff);
 }
 .cid-rUTxgdy2l2 .video-block {
@@ -1665,8 +1665,23 @@ section.lazy-placeholder:after {
     width: 100% !important;
   }
 }
+.cid-rX5jvjqXtx {
+  padding-top: 15px;
+  padding-bottom: 0px;
+  background-color: #ebe9ff;
+}
+.cid-rX5jvjqXtx .mbr-text,
+.cid-rX5jvjqXtx blockquote {
+  color: #767676;
+}
+.cid-rX5jvjqXtx .mbr-text P {
+  text-align: left;
+}
+.cid-rX5jvjqXtx .mbr-text {
+  color: #232323;
+}
 .cid-rX4cosznzJ {
-  padding-top: 90px;
+  padding-top: 45px;
   padding-bottom: 30px;
   background-color: #ffffff;
 }
